@@ -1,3 +1,9 @@
+2006-06-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* src/ephy-shell.c: (ephy_shell_new_tab_full): copy
+	history over when opening link in new tab/win using
+	context menu. Fixes bug #340742, patch by René Stadler.
+
 2006-06-04  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmarks.c: (resolve_cb):
